--- a/src/app/components/products/product-card/product-card.component.html
+++ b/src/app/components/products/product-card/product-card.component.html
@@ -21,7 +21,7 @@
   <p class="text-pay-purple mb-3">{{ productItem.price }} TT$</p>
   <button
     (click)="addToCart(productItem)"
-    class="bg-pay-purple text-white rounded-none w-full font-semibold px-3 py-2 transition-all hover:bg-pay-dark-blue"
+    class="bg-pay-purple text-white rounded-none w-full font-semibold px-3 py-2 transition-all hover:bg-purple-900"
   >
     Add to cart
   </button>
