--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,7 +1,7 @@
-<div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-3 mt-6">
+<div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-x-3 gap-y-5 mt-6">
   <div
     *ngFor="let product of products"
-    class="border border-pay-card-border rounded-md overflow-hidden"
+    class="border border-pay-card-border border-opacity-50 rounded-md overflow-hidden shadow transition-all hover:shadow-md"
   >
     <app-product-card [productItem]="product"></app-product-card>
   </div>
