--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <app-header></app-header>
-<!-- <app-sidebar></app-sidebar> -->
+<sidebar></sidebar>
 <router-outlet></router-outlet>
-<app-cart></app-cart>
 
 <app-footer></app-footer>
-
-<!-- <reactive-form></reactive-form> -->
