--- a/src/app/components/thank-you/thank-you.component.html
+++ b/src/app/components/thank-you/thank-you.component.html
@@ -1,33 +1,27 @@
 <div class="py-20 px-4">
   <div class="text-center max-w-lg mx-auto">
-    <h2
-      class="lg:text-4xl sm:text-3xl text-2xl mb-4 text-pay-dark-blue font-semibold"
-    >
-      Thank you!
-    </h2>
-    <p class="mb-3 text-pay-dark-blue">
-      <span class="text-xl">Transaction Token:</span>
-      <span
-        class="bg-pay-purple bg-opacity-80 inline-block shadow text-sm px-2 text-white py-1"
-        >{{ transactionToken }}</span
+    <div *ngIf="status === 'APPROVED'">
+      <h2
+        class="lg:text-4xl sm:text-3xl text-2xl mb-4 text-pay-dark-blue font-semibold"
       >
-    </p>
-    <p class="text-lg mb-5 text-pay-dark-blue">
-      <span class="text-xl block">status:</span>
-      <span
-        class="bg-pay-purple bg-opacity-80 inline-block shadow text-sm px-2 text-white py-1"
-        >{{ status }}</span
+        Thank you!
+      </h2>
+
+      <p class="text-lg mb-5">
+        {{ message }}
+      </p>
+      <a
+        [routerLink]="'/'"
+        class="bg-pay-purple text-white inline-block mt-8 px-4 py-1 rounded"
+        >Continue Shop</a
       >
-    </p>
-    <!-- <p
-      class="text-lg mb-5 bg-pay-purple bg-opacity-80 block shadow px-2 text-white py-1"
-    >
-      {{ message }}
-    </p> -->
-    <a
-      [routerLink]="'/'"
-      class="bg-pay-purple text-white inline-block mt-8 px-4 py-1 rounded"
-      >Continue Shop</a
-    >
+    </div>
+    <div *ngIf="status !== 'APPROVED'">
+      <h2
+        class="lg:text-4xl sm:text-3xl text-2xl mb-4 text-pay-dark-blue font-semibold"
+      >
+        Error
+      </h2>
+    </div>
   </div>
 </div>
